syntax = "proto3";

package trader;

option go_package = "cryptoquant.com/m/gen/traderpb";

// --- ENUM for clarity ---
enum PairOrderType {
  PairOrderTypeUnspecified = 0;
  PairOrderEnter = 1;        // Bet on Long Premium
  PairOrderExit = 2;         // Bet on Short Premium
}

// --- Generalized exchange order ---
message ExchangeOrder {
  string exchange = 1;        // "upbit", "binance", etc.
  string symbol = 2;          // e.g., "BTCUSDT" for binance, "BTC-KRW" for upbit
  string side = 3;            // "buy" or "sell"
  double price = 4;           // Best Bid or Ask price
  double amount = 5;          // Best Bid or Ask amount
}

// --- Order types ---

message SingleOrderSheet {
  string symbol = 1;
  ExchangeOrder order = 2;
  string reason = 3;
}

message PairOrderSheet {
  string base_symbol = 1;
  double exchange_rate = 2;
  PairOrderType pair_order_type = 3;
  ExchangeOrder upbit_order = 4;
  ExchangeOrder binance_order = 5;
  string reason = 6;
}

// --- Polymorphic Request ---

message TradeRequest {
  oneof order_type {
    SingleOrderSheet single_order = 1;
    PairOrderSheet pair_order = 2;
    // Future: MultiLegOrderSheet multi_leg_order = 3;
  }
}

// --- Response ---

message OrderResponse {
  bool success = 1;
  string message = 2;
}

// --- Service Interface ---

service Trader {
  rpc SubmitTrade(TradeRequest) returns (OrderResponse);
}